Make sure help 'dialog' is modal
Both by setting the height of the container to 100% so it always covers
the screen and also by adding a transparent background to emphasise that
it's covering the screen.

Fixes #127

--- a/src/css/fms.css
+++ b/src/css/fms.css
@@ -875,6 +875,8 @@
         top: 0px;
         display: none;
         z-index: 3005;
+        height: 100%;
+        background-color: rgba(200,200,200,0.7);
     }
 
     #helpContent {
